2002-02-19  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/product/: adding first cut at a
	product service.  

	* pylibs/vfs/zipfs.py (ZipFS.__init__), pylibs/vfs/tarfs.py
	(TarFS.__init__):  default value for root parameter was wrong in
	both cases; fixed.

	* pylibs/vfs/tarfs.py (TarFS.__init__): support for root
	parameter. 

	* pylibs/vfs/zipfs.py (ZipFS.__init__): support for root
	parameter. 

	* pylibs/vfs/vfs.py (FileNotFoundException,
	NotWriteableException): some new VFSException subclasses.	
	(FS.isWriteable): FS implementations can now declare whether
	they are writeable.  This is most useful in the cases when they
	aren't, as an fs being writeable doesn't mean that a particular
	write operation is possible.

	* pylibs/vfs/pathutil.py (Archive): added support for "root"
	parameter. 

2002-02-18  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:args:>}}):
	another LaTeX typo, grrr.

2002-02-17  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:args:>}}): forgot 
	an "\end{verbatim}"; fixed.

2002-02-16  Jacob Smullyan  <smulloni@smullyan.org>

	* docs/stmlrefer/stmlrefer.tex (section{\texttt{<:args:>}}): added
	documentation for CONNECTION.extract_args.

	* pylibs/vfs/importer.py: still very primitive import hook for vfs.

2002-02-15  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/sw.conf.in: added rewrite documentation.

	* configure.in, configure, Skunkweb/configure.in, Skunkweb/configure: 
	added rewrite to list of services

	* FAQ: Added a faq entry about cgi directories that has been on the 
	website for some while, but which I had forgotten to put here.

2002-02-14  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/rewrite.py: Added Spruce Weber's rewrite service. 

	* pylibs/Authenticator.py (Authenticator.authenticate): this method
	was dying with an error whenever someone tried a username that was
	not in the auth file; fixed.
