@@ -92,11 +92,11 @@ AC_ARG_WITH(services,
                            names are:
 
                            ae_component aecgi basicauth httpd mysql oracle
-                           postgresql remote remote_client requestHandler
+                           postgresql product remote remote_client requestHandler
                            rewrite sessionHandler templating web fcgiprot 
                            userdir], [
 	SERVICES=$withval], [
-	SERVICES="ae_component aecgi basicauth httpd mysql oracle postgresql remote remote_client requestHandler rewrite sessionHandler templating web fcgiprot userdir";])
+	SERVICES="ae_component aecgi basicauth httpd mysql oracle postgresql product remote remote_client requestHandler rewrite sessionHandler templating web fcgiprot userdir";])
 
 
 dnl Checks for programs.
