@@ -215,8 +215,9 @@ Additional options if building SkunkWeb:
                            names are:
 
                            aecgi, ae_component, basicauth, fcgiprot, httpd, mysql,
-                           oracle, postgresql, remote, remote_client, requestHandler,
-                           rewrite, sessionHandler, templating, userdir, web
+                           oracle, postgresql, product, remote, remote_client, 
+                           requestHandler, rewrite, sessionHandler, templating, 
+                           userdir, web
                            [default: install all services]
 
   --with-sudo=/path/sudo  Specify path to sudo
